--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,11 @@
 <head>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    <script src="//blueimp.github.io/JavaScript-MD5/js/md5.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-	<script src="/static/js/init.js"></script>
+	<script src="/static/js/login.js"></script>
+    <script src="/static/js/init.js"></script>
 </head>
 <body style="background-color:#f8f8f8;">
     <div class="container">
