--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     </nav>
     <div id="nav-sidebar">
         <ul class="nav nav-pills nav-stacked col-xs-3">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation" class="active"><a href="/?user={{ current_user }}">Home</a></li>
             <li role="presentation"><a href="/profile/edit?user={{ current_user }}">Profile</a></li>
             <li role="presentation"><a href="#">Messages</a></li>
         </ul>
