--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,14 +7,19 @@
         </a>
     </div>
     <div class="row">
+        <p>Your id is: {{ user_data['id'] }}</p>
+    </div>
+    <div class="row">
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"
+                       value="{{ user_data['name'] }}">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
+                        value="{{ user_data['password'] }}">
             </div>
             <div class="form-group">
                 <label for="exampleInputFile">Image input</label>
