--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
             <li role="presentation"><a href="#">Messages</a></li>
         </ul>
     </div>
-    <div id="content">
+    <div id="content" class="col-xs-9">
         {% block action_template %}{% end %}
     </div>
 {% end %}
