--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,30 +3,27 @@
     <div class="row">
         <div class="col-xs-6 col-md-3">
             <a href="#" class="thumbnail">
-            <img src="..." alt="...">
-        </a>
+                <img src="..." alt="...">
+            </a>
+        </div>
     </div>
     <div class="row">
         <p>Your id is: {{ user_data['id'] }}</p>
     </div>
     <div class="row">
-        <form>
+        <form id="login-signup" method="post">
             <div class="form-group">
-                <label for="exampleInputEmail1">Username</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"
+                <label for="login">Login</label>
+                <input type="text" class="form-control" id="login" placeholder="Login" name="login"
                        value="{{ user_data['name'] }}">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
-                        value="{{ user_data['password'] }}">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
-            <div class="form-group">
-                <label for="exampleInputFile">Image input</label>
-                <input type="file" id="exampleInputFile">
-                <p class="help-block">Example block-level help text here.</p>
+            <div class="center-block" style="width:135px;">
+                <button type="submit" class="btn btn-success" data-action="/profile/edit">Edit</button>
             </div>
-            <button type="submit" class="btn btn-default">Edit</button>
         </form>
     </div>
 {% end %}
