--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,23 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+                <input type="password" class="form-control" id="password" placeholder="Password" name="password"
+                       value="{{ user_data.password }}">
+            </div>
+            <div class="form-group">
+                <label for="first_name">First name</label>
+                <input type="text" class="form-control" id="first_name" placeholder="First name" name="first_name"
+                       value="{{ user_data.first_name }}">
+            </div>
+            <div class="form-group">
+                <label for="last_name">Last name</label>
+                <input type="text" class="form-control" id="last_name" placeholder="Last name" name="last_name"
+                       value="{{ user_data.last_name }}">
+            </div>
+            <div class="form-group">
+                <label for="email">E-mail</label>
+                <input type="text" class="form-control" id="email" placeholder="E-mail" name="email"
+                       value="{{ user_data.email }}">
             </div>
             <div class="center-block" style="width:135px;">
                 <button type="submit" class="btn btn-success" data-action="/profile/edit">Edit</button>
