--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script src="/static/js/login.js"></script>
+    <script src="/static/js/chat.js"></script>
     <script src="/static/js/init.js"></script>
 </head>
 <body style="background-color:#f8f8f8;">
