--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,9 +12,9 @@
     </nav>
     <div id="nav-sidebar">
         <ul class="nav nav-pills nav-stacked col-xs-3">
-            <li role="presentation" class="active"><a href="/?user={{ current_user }}">Home</a></li>
-            <li role="presentation"><a href="/profile/edit?user={{ current_user }}">Profile</a></li>
-            <li role="presentation"><a href="#">Messages</a></li>
+            <li role="presentation" {% if request.uri.startswith('/?user') %} class="active" {% end %}><a href="/?user={{ current_user }}">Home</a></li>
+            <li role="presentation" {% if request.uri.startswith('/profile') %} class="active" {% end %}><a href="/profile/edit?user={{ current_user }}">Profile</a></li>
+            <li role="presentation" {% if request.uri.startswith('/messages') %} class="active" {% end %}><a href="/messages?user={{ current_user }}">Messages</a></li>
         </ul>
     </div>
     <div id="content" class="col-xs-9">
