--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,39 @@
-.navbar-bg-blue {
-    background-color: #428bca;
+.container {
+    border-radius: 2px;
+    padding: 10px;
+    min-height: 800px;
+}
+
+.navbar-bg-grey {
+    background-color: rgba(128, 128, 128, 0.12);
+}
+
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
+    background-color: #80787c;
+}
+
+.nav-pills>li>a {
+    color: #262b2f;
+}
+
+#nav-sidebar ul {
+    background-color: #f8f8f8;
+    padding-bottom: 10px;
+    border-radius: 3px;
+    border: 1px solid #e7e7e7;
+}
+
+#nav-sidebar ul li {
+    margin: 8px 0 0 14px;
+    text-align: center;
 }
 
 #content {
     float: left;
+    background-color: #fff;
+    margin-left: 10px;
+    min-height: 800px;
+    border-radius: 2px;
 }
 
 .active-user {
