--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,16 @@
     <script src="/static/js/init.js"></script>
 </head>
 <body style="background-color:#f8f8f8;">
+    <nav class="navbar navbar-default navbar-bg-grey">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <!--<img alt="Brand" src="...">-->
+                    Logo
+                </a>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         {% block body_template %}{% end %}
     </div>
