Revert "user data editing ultimate"
This reverts commit e863b9a6f516c2b1461409753031b87c893359ed.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,6 +18,11 @@
                        value="{{ user_data.login }}">
             </div>
             <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" name="password"
+                       value="{{ user_data.password }}">
+            </div>
+            <div class="form-group">
                 <label for="first_name">First name</label>
                 <input type="text" class="form-control" id="first_name" placeholder="First name" name="first_name"
                        value="{{ user_data.first_name }}">
@@ -33,19 +38,7 @@
                        value="{{ user_data.email }}">
             </div>
             <div class="center-block" style="width:135px;">
-                <button type="submit" class="btn btn-success" data-action="/profile/edit/user?user={{ user_data.login }}">Edit</button>
-            </div>
-        </form>
-    </div>
-    <div class="row">
-        <form id="login-signup" method="post">
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password" name="password"
-                       value="" required>
-            </div>
-            <div class="center-block" style="width:135px;">
-                <button type="submit" class="btn btn-success" data-action="/profile/edit/password?user={{ user_data.login }}"/>Change password</button>
+                <button type="submit" class="btn btn-success" data-action="/profile/edit">Edit</button>
             </div>
         </form>
     </div>
