--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <h1>Social board</h1>
     <form method="post" action="/messages?user={{ current_user }}">
         <div class="form-group">
-            <label for="message">Write your thoughts on board - everyone can look it !</label>
+            <label for="message">Write your thoughts on board - everyone can look at it !</label>
             <textarea class="form-control" id="message" name="message" required></textarea>
         </div>
         <div>
