--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,52 +1,48 @@
 {% extends "layout.html" %}
 {% block action_template %}
-    <div class="row">
-        <div class="col-xs-6 col-md-3">
-            <a href="#" class="thumbnail">
-                <img src="..." alt="...">
-            </a>
+    <h2 style="text-align:center;">Edit your profile</h2>
+    <div style="margin: 10px auto; width: 800px;">
+        <div class="row">
+            <p>Your id is: {{ user_data.id }}</p>
         </div>
-    </div>
-    <div class="row">
-        <p>Your id is: {{ user_data.id }}</p>
-    </div>
-    <div class="row">
-        <form id="login-signup" method="post">
-            <div class="form-group">
-                <label for="login">Login</label>
-                <input type="text" class="form-control" id="login" placeholder="Login" name="login"
-                       value="{{ user_data.login }}">
-            </div>
-            <div class="form-group">
-                <label for="first_name">First name</label>
-                <input type="text" class="form-control" id="first_name" placeholder="First name" name="first_name"
-                       value="{{ user_data.first_name }}">
-            </div>
-            <div class="form-group">
-                <label for="last_name">Last name</label>
-                <input type="text" class="form-control" id="last_name" placeholder="Last name" name="last_name"
-                       value="{{ user_data.last_name }}">
-            </div>
-            <div class="form-group">
-                <label for="email">E-mail</label>
-                <input type="text" class="form-control" id="email" placeholder="E-mail" name="email"
-                       value="{{ user_data.email }}">
-            </div>
-            <div class="center-block" style="width:135px;">
-                <button type="submit" class="btn btn-success" data-action="/profile/edit/user?user={{ user_data.login }}">Edit</button>
-            </div>
-        </form>
-    </div>
-    <div class="row">
-        <form id="login-signup" method="post">
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password" name="password"
-                       value="" required>
-            </div>
-            <div class="center-block" style="width:135px;">
-                <button type="submit" class="btn btn-success" data-action="/profile/edit/password?user={{ user_data.login }}"/>Change password</button>
-            </div>
-        </form>
+        <div class="row">
+            <form id="login-signup" method="post">
+                <div class="form-group">
+                    <label for="login">Login</label>
+                    <input type="text" class="form-control" id="login" placeholder="Login" name="login"
+                           value="{{ user_data.login }}">
+                </div>
+                <div class="form-group">
+                    <label for="first_name">First name</label>
+                    <input type="text" class="form-control" id="first_name" placeholder="First name" name="first_name"
+                           value="{{ user_data.first_name }}">
+                </div>
+                <div class="form-group">
+                    <label for="last_name">Last name</label>
+                    <input type="text" class="form-control" id="last_name" placeholder="Last name" name="last_name"
+                           value="{{ user_data.last_name }}">
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="text" class="form-control" id="email" placeholder="E-mail" name="email"
+                           value="{{ user_data.email }}">
+                </div>
+                <div class="center-block" style="width:135px;">
+                    <button type="submit" class="btn btn-success" data-action="/profile/edit/user?user={{ user_data.login }}">Edit</button>
+                </div>
+            </form>
+        </div>
+        <div class="row">
+            <form id="login-signup" method="post">
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password" name="password"
+                           value="" required>
+                </div>
+                <div class="center-block" style="width:135px;">
+                    <button type="submit" class="btn btn-success" data-action="/profile/edit/password?user={{ user_data.login }}"/>Change password</button>
+                </div>
+            </form>
+        </div>
     </div>
 {% end %}
